--- a/style.css
+++ b/style.css
@@ -1,6 +1,1 @@
-<<<<<<< HEAD
-study
-=======
-we are looking for a job wnwnjnwjcn
-whudjwnjdnjwndnwjdn
->>>>>>> 94fe3d0e64b69d9cd6d2d4c0220ccc8bf9e238c
+ hjbkjnkbhj bn  mkmkjnkk
